- пароль администратора теперь может быть 5 символов а не 6
- таблица пользователей теперь user вместо prefix_users
- миграция для добавления полей форума к таблице user из advanced приложения yii