@@ -1,4 +1,21 @@
-1. установите advanced приложение yii фреймворка
+1. установите advanced приложение yii фреймворка:
+
+- настройте common/config/params.php
+
+return [
+    'adminEmail' => 'admin@crimearooms.ru',
+    'adminUsername' => 'admin',
+    'adminDefaultPassword' => '12345',
+    ...
+];
+
+- добавьте настройку миграций в console/config/main.php
+
+	'controllerMap' => [
+		'migrate' => [
+			'class' => 'yii\console\controllers\MigrateController'
+		]
+	]
 
 2. установите форум /forum/install.php
 
@@ -29,13 +46,5 @@ $return = yii\helpers\ArrayHelper::merge(
 	$return, 
 	require dirname(dirname(__DIR__)) . '/frontend/web/forum/module/config/backend.php'
 );
-
-6. добавьте настройку миграций в console/config/main.php
-
-'controllerMap' => [
-	'migrate' => [
-		'class' => 'yii\console\controllers\MigrateController'
-	]
-]
 
 7. примените миграции форума командой yii migrate
