@@ -1,3 +1,7 @@
 - пароль администратора теперь может быть 5 символов а не 6
 - таблица пользователей теперь user вместо prefix_users
 - миграция для добавления полей форума к таблице user из advanced приложения yii
+- миграция для добавления гостя
+- миграция для добавления админа
+- поля registred на форуме больше нет, теперь называется created_at как в yii
+- миграция для удаления демо-топиков (чтобы не было конфликта если база юзеров была не пустая и id админа теперь другое)
